2004-10-18  Martin Baulig  <martin@ximian.com>

	Merged latest changes into gmcs.  Please keep this comment in
	here, it makes it easier for me to see what changed in MCS since
	the last time I merged.

2004-10-18  Martin Baulig  <martin@ximian.com>

	* statement.cs (Fixed.Resolve): Don't access the TypeExpr's
	`Type' directly, but call ResolveType() on it.
	(Catch.Resolve): Likewise.
	(Foreach.Resolve): Likewise.

2004-10-18  Martin Baulig  <martin@ximian.com>

	* expression.cs (Cast.DoResolve): Don't access the TypeExpr's
	`Type' directly, but call ResolveType() on it.
	(Probe.DoResolve): Likewise.
	(ArrayCreation.LookupType): Likewise.
	(TypeOf.DoResolve): Likewise.
	(SizeOf.DoResolve): Likewise.

2004-10-18  Martin Baulig  <martin@ximian.com>

	* expression.cs (Invocation.BetterFunction): Put back
	TypeManager.TypeToCoreType().

2004-10-18  Raja R Harinath  <rharinath@novell.com>

	* class.cs (FieldMember.DoDefine): Reset ec.InUnsafe after doing
	the ResolveType.

2004-10-18  Martin Baulig  <martin@ximian.com>

	* parameter.cs (Parameter.Resolve):  Don't access the TypeExpr's
	`Type' directly, but call ResolveType() on it.

2004-10-18  Martin Baulig  <martin@ximian.com>

	* class.cs (FieldMember.Define): Don't access the TypeExpr's
	`Type' directly, but call ResolveType() on it.
	(MemberBase.DoDefine): Likewise.

	* expression.cs (New.DoResolve): Don't access the TypeExpr's
	`Type' directly, but call ResolveType() on it.
	(ComposedCast.DoResolveAsTypeStep): Likewise.

	* statement.cs (LocalInfo.Resolve): Don't access the TypeExpr's
	`Type' directly, but call ResolveType() on it.

2004-10-17  John Luke  <john.luke@gmail.com>

	* class.cs (Operator.GetSignatureForError): use CSharpName

	* parameter.cs (Parameter.GetSignatureForError): Returns
	correct name even if was not defined.

2004-10-13  Raja R Harinath  <rharinath@novell.com>

	Fix #65816.
	* class.cs (TypeContainer.EmitContext): New property.
	(DefineNestedTypes): Create an emitcontext for each part.